# python-resume-parser

./: .gitIgnore  pyproject.toml
src/: main.py
src/config/: settings.py
src/messaging/: consumer.py
src/parser/: textextract.py
src/tests/: TestConsumer.py
